# unv-smi

./: CMakeLists.txt  README.md  execsh.cpp  formatter.cpp  formatter.h  parEnv.cpp  parEnv.h  unv-smi-linux.cpp  unv-smi-macos.cpp  unv-smi-win64.cpp  unv-smi.cpp
include/: LinuxInfo.h  MacInfo.h  SystemInfo.h  WindowsInfo.h  execsh.h  gpuinfo.h
src/: execsh.cpp  formatter.cpp  gpuinfo.cpp  parEnv.cpp
